Modify SBT_OPTS
Because MaxPermSize is deprecated due to Java version upgrade.